--- a/2.het.zgtpmn/2.het.zgtpmn/wwwroot/cv.html
+++ b/2.het.zgtpmn/2.het.zgtpmn/wwwroot/cv.html
@@ -2,31 +2,34 @@
 <html>
 <head>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="cv.css">
     <title>cv zgtpmn</title>
 </head>
 <body>
     <h1> Kasnya Csilla </h1>
     <h2>ZGTPMN</h2>
-    <p> <strong> Magamról röviden:</strong> Kiskorom óta szeretnék űrhajós lenni, gyermekkori álmom volt, hogy az első ember legyek a Marson, emiatt tanulmányaim során fontos szerepet kapott a matematika és a fizika.<br> Emellett barátságos, természetszerető személy vagyok, legnagyobb hobbim az olvasás de szeretek sportolni is.</p>
-    <p><em>Végzettségek:</em></p>
-    <div>
-        <ul>
-            <li>Virágkötő okj</li>
-            <li>Piramisépítő okj</li>
-            <li>8 általános</li>
-        </ul>
-    </div>
-    <hr>
-    <p><em>Extra képességek rangsorolva:</em></p>
-    <ol>
-        <li>Kutyák nyelvének megértése</li>
-        <li>1 liter H<sub>2</sub>O megivása 10 másodperc alatt</li>
-        <li>Állásból hídba lemenés</li>
+    <p> <span> Magamról röviden:</span> Kiskorom óta szeretnék űrhajós lenni, gyermekkori álmom volt, hogy az első ember legyek a Marson, emiatt tanulmányaim során fontos szerepet kapott a matematika és a fizika.<br> Emellett barátságos, természetszerető személy vagyok, legnagyobb hobbim az olvasás de szeretek sportolni is.</p>
+    <div id="lista">
+        <p class="plus">Végzettségek:</p>
 
-    </ol>
+            <ul class="feher">
+                <li>Virágkötő okj</li>
+                <li>Piramisépítő okj</li>
+                <li>8 általános</li>
+            </ul>
+</div>
     <hr>
-    <p> <a href="https://www.netflix.com/browse" traget="_blank"> A kedvenc oldalamon</a> szoktam tájékozódni az űrutazásról a Rick&Morty sorozatot nézve.</p>
-    <img src="capaci.jpg" alt=" Ez egy cápaci" >
+    <div id="extra">
+        <p class="plus"> Extra képességek rangsorolva:</p>
+            <ol class="kepessegek">
+                <li>Kutyák nyelvének megértése</li>
+                <li>1 liter H<sub>2</sub>O megivása 10 másodperc alatt</li>
+                <li>Állásból hídba lemenés</li>
+
+            </ol>
+    </div>
+    <p> <a href="https://www.netflix.com/browse" traget="_blank"> A kedvenc oldalamon</a> szoktam tájékozódni az űrutazásról a <span class="rick">Rick&Morty</span> sorozatot nézve.</p>
+    <img src="capaci.jpg" alt=" Ez egy cápaci">
 
 
 </body>
