--- a/2.het.zgtpmn/2.het.zgtpmn/wwwroot/hajo.html
+++ b/2.het.zgtpmn/2.het.zgtpmn/wwwroot/hajo.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="hajo.css">
+    <script src="hetedik.js"></script>
     <title>Hajósteszt</title>
 </head>
 <body>
@@ -13,17 +14,17 @@
 
         <div id="középső">
             <div id="válaszok">
-                <div id="válasz1" class="kerdes kattintható">Válasz 1</div>
-                <div id="válasz2" class="kerdes kattintható jó">Válasz 2</div>
-                <div id="válasz3" class="kerdes kattintható rossz">Válasz 3</div>
+                <div id="válasz1" class="kerdes kattintható" onclick=elsőv()>Válasz 1</div>
+                <div id="válasz2" class="kerdes kattintható" onclick=másodikv()>Válasz 2</div>
+                <div id="válasz3" class="kerdes kattintható" onclick=harmadikv()>Válasz 3</div>
             </div>
             <div id="kép">
-                <img id="kép1" src="https://szoft1.comeback.hu/hajo/teszt-0050.jpg" />
+                <img id="kép1"/>
             </div>
         </div>
         <div id="vezérlő">
-            <div class="gomb kattintható">Vissza</div>
-            <div class="gomb kattintható">Előre</div>
+            <div class="gomb kattintható" onclick=Vissza()>Vissza</div>
+            <div class="gomb kattintható" onclikck=Előre()>Előre</div>
         </div>
     </div>
 </body>
