--- a/2.het.zgtpmn/2.het.zgtpmn/wwwroot/hajotizedik .html
+++ b/2.het.zgtpmn/2.het.zgtpmn/wwwroot/hajotizedik .html
@@ -7,7 +7,7 @@
 
     <link href="hajo.css" rel="stylesheet" />
     <meta name="viewport" content="width=device width, initial scale=1.0">
-    <script src="tizedik.js"></script>
+    <script src="tizedikujra.js"></script>
 
 
 
@@ -30,8 +30,8 @@
             </div>
         </div>
         <div id="vezérlő">
-            <div id="vissza" class="gomb kattinthato">Vissza</div>
-            <div id="előre" class="gomb kattinthato">Előre</div>
+            <div id="vissza_gomb" class="gomb kattinthato">Vissza</div>
+            <div id="előre_gomb" class="gomb kattinthato">Előre</div>
         </div>
     </div>
 </body>
